--- a/table.css
+++ b/table.css
@@ -54,6 +54,8 @@ table, th, td {
 	border: 4px solid #713a92;
 	border-collapse: collapse;
 	color: #302828;
+	background: linear-gradient(135deg, rgba(255,255,255,0.5) -90%,
+	rgba(255,255,255,0.33) -100%,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 100%);
 	text-align: left;
 }
 
@@ -72,7 +74,8 @@ table {
 th {
 	padding: 5px 10px 5px;
 
-	background-color: #bfbfbf;
+	color: white;
+	background-color: #a77acc;
 	font-weight: bold;
 }
 
